[package]
name = "rusty-touchstone-status"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
scraper = { version = "0.12.0" }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = { version = "1.0.71" }
structopt = { version = "0.3.25" }
